--- a/templates/time_end.html
+++ b/templates/time_end.html
@@ -6,12 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>首页</title>
     <link rel="stylesheet" href="https://unpkg.com/mobi.css/dist/mobi.min.css">
+
+    <script type="text/javascript">
+    function countDown(secs,surl){
+     //alert(surl);
+     var jumpTo = document.getElementById('jumpTo');
+     jumpTo.innerHTML=secs;
+     if(--secs>0){
+      setTimeout("countDown("+secs+",'"+surl+"')",1000);
+     }
+     else
+     {
+      location.href=surl;
+     }
+    }
+    </script>
+
 </head>
 <body>
 <div class="flex-center">
     <div class="container">
         <div>
-            <h1 class="logo"><a href="{% url 'index' %}">主页</a></h1>
+            <h1 class="logo"><a href="{% url 'index' %}">结束页面</a></h1>
             {% if user.is_authenticated %}
                 <p>你已登录，欢迎你：<a href="#">{{ user.username }}</a></p>
                 <button class="btn btn-default"><a href="{% url 'logout' %}?next={{ request.path }}">注销登录</a>
@@ -19,29 +35,14 @@
                 <button class="btn btn-default"><a href="{% url 'password_change' %}?next={{ request.path }}">修改密码</a>
                 </button>
                 <div>
-                <button class="btn btn-default"><a href="/cal">签到打卡</a></button>
+                结束计时时间为：{{ time2 }}
                 </div>
+                    本次值班时间：{{ cal }}
                 <div>
-                     {% if post.student_id == user.student_id%}
-                         结束时间：
-                     {% endif  %}
-                </div>
-                <div>
-                    {% for post in post_list %}
-                        {% if post.student_id == user.student_id%}
-                            <tr>
-                            <td>你的学号：{{ post.student_id }}</td>
-                            <td>你的工作时间：{{post.time}}</td>
-                            <td>你的工钱：{{ post.time }}h x {{ post.work_pay }}元 =
-                                {% for key,value in count.items %}
-                                    {% if key == user.student_id %}
-                                        {{ value }}
-                                    {% endif %}
-                                {% endfor %}
-                                元</td>
-                            </tr>
-                        {% endif %}
-                    {% endfor %}
+                <span class = '5miao' id="jumpTo">5</span>秒后自动跳转到主页
+                    <script type="text/javascript">
+                    countDown(5,'/');
+                    </script>
                 </div>
 
             {% else %}
